<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/distance_large"
  android:gravity="center"
  android:orientation="vertical">

  <EditText
    android:id="@+id/editUsername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/hint_user_name"
    android:hint="@string/hint_user_name"
    android:inputType="text" />

  <EditText
    android:id="@+id/editPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/distance_small"
    android:autofillHints="@string/hint_password"
    android:hint="@string/hint_password"
    android:inputType="textPassword"
    />

  <Button
    android:id="@+id/buttonLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/distance_large"
    android:text="@string/text_log_in" />

  <ProgressBar
    android:id="@+id/progressBarLoading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    />

</LinearLayout>