<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ProgressBar
    android:id="@+id/viewProgress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/floatingActionButtonSave"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/distance_medium"
    android:layout_marginBottom="@dimen/distance_medium"
    android:layout_marginEnd="@dimen/distance_medium"
    android:layout_gravity="end|bottom"
    android:clickable="true"
    android:contentDescription="@string/text_save"
    android:focusable="true"
    app:srcCompat="@android:drawable/ic_menu_save" />

  <ScrollView
    android:id="@+id/viewContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingStart="@dimen/distance_medium"
      android:paddingEnd="@dimen/distance_medium"
      >
      <TextView
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_large"
        android:text="@string/canteen_name" />

      <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_canteen_name"
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:text="The Apollo Restaurant - 🇬🇷" />

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      >
      <TextView
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_large"
        android:layout_alignParentStart="true"
        android:text="@string/text_dish" />
      <TextView
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_large"
        android:layout_marginEnd="@dimen/distance_large"
        android:text="@string/text_dish_price"
        android:layout_alignParentEnd="true"
        android:textAlignment="textStart" />
    </RelativeLayout>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/editTextDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor"
        tools:text="Origin Greek Salad With Chicken" />

      <EditText
        android:id="@+id/editTextDishPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor"
        tools:text="€14,90" />
    </RelativeLayout>

      <TextView
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_large"
        android:text="@string/text_website" />
      <EditText
        android:id="@+id/editWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textUri"
        tools:ignore="LabelFor"
        tools:text="https://theapollo.com.au/" />

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
          style="@style/TextAppearance.MaterialComponents.Overline"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/distance_large"
          android:text="@string/text_phone_number"
          android:layout_alignParentStart="true"
          />

        <TextView
          style="@style/TextAppearance.MaterialComponents.Overline"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/distance_large"
          android:text="@string/text_waiting_time"
          android:layout_alignParentEnd="true"/>
      </RelativeLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
          android:id="@+id/editPhoneNumber"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:importantForAutofill="no"
          android:inputType="phone"
          tools:ignore="LabelFor"
          tools:text="+61283540888"
          android:layout_alignParentStart="true"/>

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true">

          <EditText
            android:id="@+id/editTextWaitingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            tools:ignore="LabelFor" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distance_small"
            android:text="@string/text_minutes" />
        </LinearLayout>

      </RelativeLayout>


      <ProgressBar
        android:id="@+id/progressBarWaitingTime"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="60" />

      <TextView
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_large"
        android:text="@string/text_location" />

      <EditText
        android:id="@+id/editTextLocation"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        tools:ignore="LabelFor" />

      <fragment
        android:id="@+id/mapFragmentMap"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_canteen_details_map"
        android:layout_marginTop="@dimen/distance_small"
        android:layout_marginBottom="@dimen/distance_small"/>

      <LinearLayout
        android:id="@+id/linearLayoutReviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/distance_large"/>

    </LinearLayout>
  </ScrollView>
</FrameLayout>